# android-hprof-browser

./: .travis.yml  CMakeLists.txt  Dockerfile  LICENSE
cli/: CMakeLists.txt
cli/includes/: tools.h
cli/src/: main.cxx  tools.cxx
hprof/: CMakeLists.txt
hprof/include/: filters.h  hprof_data_reader.h  hprof_data_reader_factory.h  hprof_data_reader_v103.h  hprof_dump_data.h  hprof_istream.h  hprof_types.h  hprof_types_array.h  hprof_types_base.h  hprof_types_class.h  hprof_types_instance.h  hprof_types_roots.h  name_tokenizer.h
hprof/includes/: filters.h  filters_apply.h  filters_base.h  filters_comparation.h  filters_instanceof.h  filters_logical.h  filters_value.h  heap_profile.h  hprof.h  hprof_data_reader_v103.h  hprof_dump_data.h  hprof_file.h  hprof_istream.h  hprof_types_array.h  hprof_types_base.h  hprof_types_class.h  hprof_types_helper.h  hprof_types_instance.h  name_tokenizer.h  objects_index.h  query.h  types.h
hprof/includes/filters/: apply_to_field.h  base.h  classname.h  comparation.h  field_fetcher.h  filter_comp_value.h  instance_of.h  logical.h
hprof/includes/reader/: data_reader_v103.h
hprof/includes/types/: class.h  fields.h  gc_root.h  heap_item.h  instance.h  object.h  objects_array.h  primitives_array.h  string_instance.h  value_reader.h
hprof/src/: data_reader_factory.cxx  heap_profile.cxx  hprof_data_reader_factory.cxx  hprof_data_reader_v103.cxx  hprof_dump_data.cxx  hprof_file.cxx  hprof_types_helper.cxx  types.cxx
hprof/src/reader/: data_reader_v103.cxx
hprof/src/types/: class.cxx  gc_root.cxx  instance.cxx  objects_array.cxx  primitives_array.cxx  string_instance.cxx
hprof/test/: filter_mocks.cxx  filter_mocks.h  filters_instanceof_test.h  filters_logical_test.h  filters_mocks.h  filters_test.h  hprof_data_reader_factory_test.h  hprof_istream_test.h  main.cxx  membuf.h  mocks.h  name_tokenizer_test.h  test_data_reader_factory.h  test_hprof_istream.h  test_name_tokenizer.h  test_types.h
hprof/test/filters/: test_classname.h  test_instance_of.h  test_logical.h
hprof/test/types/: test_class.h  test_fields.h  test_gc_root.h  test_instance.h  test_object.h  test_objects_array.h  test_primitives_array.h  test_string_instance.h
parser/: CMakeLists.txt
parser/includes/: language_driver.h  language_scanner.h
parser/src/: language.lex  language_driver.cxx  language_parser.y  language_parser.yy
parser/test/: main.cxx  parser_basic_query_tests.h
ui/: CMakeLists.txt
ui/includes/: actions.h  dispatcher.h  hprof_browser_application.h  hprof_data_manager.h  hprof_storage.h  main_window.h  object_fields_columns.h  storage.h  treeview_storage.h
ui/src/: dispatcher.cxx  hprof_browser_application.cxx  hprof_storage.cxx  main.cxx  main_window.cxx  new_window.cxx  object_fields_columns.cxx  storage.cxx  treeview_storage.cxx
